--- a/src/css/style.css
+++ b/src/css/style.css
@@ -128,15 +128,6 @@ body textarea {
   width: 150px;
 }
 
-@media only screen and (max-width: 600px) {
-  body {
-    background-position: center left, center right;
-    background-size: auto clamp(350px, 50vh, 500px);
-  }
-  #compare-tables {
-    max-width: 320px;
-  }
-}
 h1,
 h2 {
   font-family: "Norse Bold", "Times New Roman", Times, serif;
@@ -200,33 +191,34 @@ details > summary::-webkit-details-marker {
 }
 
 #compare-tables {
+  width: 100%;
   display: flex;
-  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
 }
 #compare-tables .compare {
-  min-width: 250px;
+  max-width: 320px;
   box-sizing: border-box;
-  display: inline-flex;
   flex: 1;
-  flex-direction: column;
-  gap: 15px;
-  padding: 10px;
 }
 #compare-tables .compare#opposites .spacer-row {
   height: 8px;
   background-color: transparent;
 }
 #compare-tables .compare h3 {
-  margin: 0;
+  margin-top: 0;
 }
-#compare-tables .compare td {
+#compare-tables .compare table {
+  width: 100%;
+}
+#compare-tables .compare table td {
   background-color: var(--box-bg-color);
   padding: 2px 5px;
 }
-#compare-tables .compare td:first-child {
+#compare-tables .compare table td:first-child {
   font-weight: 700;
 }
-#compare-tables .compare td.unlike-row {
+#compare-tables .compare table td.unlike-row {
   background-color: rgba(250, 250, 250, 0.6);
   color: var(--bg-color);
   font-size: 0.85rem;
@@ -259,4 +251,18 @@ ul.words-list li {
   border-radius: 8px;
   font-weight: 700;
   padding: 5px 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-position: center left, center right;
+    background-size: auto clamp(350px, 50vh, 500px);
+  }
+  #compare-tables {
+    flex-wrap: wrap;
+  }
+  #compare-tables .compare {
+    width: 100%;
+    flex: auto;
+  }
 }/*# sourceMappingURL=style.css.map */
