--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -148,17 +148,6 @@ body {
     }
 }
 
-@media only screen and (max-width: 600px) {
-    body {
-        background-position: center left, center right;
-        background-size: auto clamp(350px, 50vh, 500px);
-    }
-
-    #compare-tables {
-        max-width: 320px;
-    }
-}
-
 // HEADINGS
 
 h1,
@@ -236,17 +225,15 @@ details {
 }
 
 #compare-tables {
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
 
     .compare {
-        min-width: 250px;
+        max-width: 320px;
         box-sizing: border-box;
-        display: inline-flex;
         flex: 1;
-        flex-direction: column;
-        gap: 15px;
-        padding: 10px;
 
         &#opposites {
             .spacer-row {
@@ -256,22 +243,26 @@ details {
         }
 
         h3 {
-            margin: 0;
+            margin-top: 0;
         }
 
-        td {
-            background-color: var(--box-bg-color);
-            padding: 2px 5px;
+        table {
+            width: 100%;
 
-            &:first-child {
-                font-weight: 700;
-            }
+            td {
+                background-color: var(--box-bg-color);
+                padding: 2px 5px;
 
-            &.unlike-row {
-                background-color: rgba(250, 250, 250, 0.6);
-                color: var(--bg-color);
-                font-size: 0.85rem;
-                font-weight: 700;
+                &:first-child {
+                    font-weight: 700;
+                }
+
+                &.unlike-row {
+                    background-color: rgba(250, 250, 250, 0.6);
+                    color: var(--bg-color);
+                    font-size: 0.85rem;
+                    font-weight: 700;
+                }
             }
         }
     }
@@ -303,5 +294,23 @@ ul.words-list {
         border-radius: 8px;
         font-weight: 700;
         padding: 5px 10px;
+    }
+}
+
+// RESPONSIVE
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-position: center left, center right;
+        background-size: auto clamp(350px, 50vh, 500px);
+    }
+
+    #compare-tables {
+        flex-wrap: wrap;
+
+        .compare {
+            width: 100%;
+            flex: auto;
+        }
     }
 }
