--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -164,6 +164,11 @@ h1 {
 
 h2 {
     color: var(--accent-color);
+
+    &.bigger-header {
+        font-size: 2.4rem;
+        margin-bottom: 15px;
+    }
 }
 
 // IMAGES
@@ -278,6 +283,10 @@ details {
     flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
+}
+
+.wait {
+    font-style: italic;
 }
 
 ul.words-list {
