--- a/public/about/css/style.scss
+++ b/public/about/css/style.scss
@@ -15,6 +15,11 @@
     --accent-color-2: #96afb3;
 }
 
+body,
+html {
+    height: 100%;
+}
+
 body {
     background-attachment: fixed;
     background-color: var(--bg-color);
@@ -23,34 +28,33 @@ body {
     background-position: center left 6vw, center right 6vw;
     background-repeat: no-repeat;
     background-size: auto clamp(400px, 60vh, 800px);
-
     color: var(--text-color);
     font-family: "PT Sans Narrow", Helvetica, Arial, sans-serif;
     font-size: 18px;
     font-weight: normal;
     line-height: 1.5rem;
-
     margin: 0;
 
     main {
         height: 100%;
         width: 100%;
-        box-sizing: border-box;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        gap: 25px;
         overflow: auto;
-        text-align: center;
 
-        box-sizing: border-box;
-        margin: 90px 0;
-        padding: 0px 15px;
+        #container {
+            min-height: 100%;
+            box-sizing: border-box;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            gap: 25px;
+            padding: 90px 15px;
+            text-align: center;
 
-        & > * {
-            max-width: 800px;
-            margin: 0 auto;
+            & > * {
+                max-width: 800px;
+                margin: 0 auto;
+            }
         }
     }
 }
@@ -136,4 +140,13 @@ blockquote {
 
 #copyright {
     color: var(--accent-color-2);
+}
+
+// RESPONSIVE
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-position: center left, center right;
+        background-size: auto clamp(350px, 50vh, 500px);
+    }
 }
