add about link to sign-in

--- a/src/css/sign-in.css
+++ b/src/css/sign-in.css
@@ -15,6 +15,9 @@
   padding: 60px 10px;
   text-align: center;
 }
+#sign-in .container h1 {
+  margin: 0;
+}
 #sign-in .container form table {
   border-spacing: 8px;
   margin: auto;
@@ -31,7 +34,9 @@
 #sign-in .container #reset-pw-btn {
   background-color: transparent;
   color: var(--accent-color);
+  display: inline;
   font-weight: normal;
+  padding: 0;
   text-decoration: underline;
 }
 #sign-in .container #reset-pw-btn:hover {
