--- a/public/about/css/style.scss
+++ b/public/about/css/style.scss
@@ -64,6 +64,7 @@ body {
 h1,
 h2 {
     font-family: "Norse Bold", "Times New Roman", Times, serif;
+    margin: 0;
 }
 
 h1 {
@@ -86,11 +87,6 @@ h2 {
 }
 
 // MISC
-
-h2,
-nav {
-    margin: 10px auto !important;
-}
 
 a {
     color: var(--accent-color);
@@ -115,7 +111,6 @@ blockquote {
         font-family: "Times New Roman", Times, serif;
         font-size: 6em;
         line-height: 0.1em;
-        margin-right: 0.25em;
         position: absolute;
     }
 
@@ -140,6 +135,13 @@ blockquote {
 
 #copyright {
     color: var(--accent-color-2);
+}
+
+img.separator {
+    height: auto;
+    width: 150px;
+    margin: auto;
+    padding: 20px 0;
 }
 
 // RESPONSIVE
