--- a/src/css/sign-in.scss
+++ b/src/css/sign-in.scss
@@ -13,7 +13,8 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        padding: 60px 10px;
+        gap: 25px;
+        padding: 90px 15px;
         text-align: center;
 
         h1 {
