--- a/src/css/spread.css
+++ b/src/css/spread.css
@@ -33,21 +33,25 @@ main .slide {
   box-sizing: border-box;
   color: var(--text-color);
   overflow-y: auto;
-  padding: 60px 10px;
+  padding: 60px 15px 80px;
   scroll-snap-align: start;
+}
+main .slide#home {
+  padding-top: 90px;
+}
+main .slide#home.unverified {
+  display: flex;
 }
 main .slide#home .slide-container {
   min-height: 100%;
   justify-content: center;
-}
-main .slide#home.unverified {
-  display: flex;
 }
 main .slide#home .description {
   font-size: 18px;
   font-weight: 700;
   line-height: 1.5rem;
   max-width: 650px;
+  padding: 30px 0;
 }
 main .slide#home #custom-question {
   max-width: 320px;
@@ -57,18 +61,20 @@ main .slide#home #custom-question {
   flex-direction: column;
   gap: 10px;
 }
+main .slide#home #questions {
+  gap: 35px;
+}
 main .slide#home #questions,
 main .slide#home #questions .question-section {
   display: flex;
   flex-direction: column;
-  gap: 10px;
 }
 main .slide#home #questions,
 main .slide#home #questions button {
   width: 100%;
 }
 main .slide#home #questions .question-section {
-  margin-bottom: 30px;
+  gap: 10px;
 }
 main .slide#home #questions .question-section button {
   height: 60px;
@@ -122,7 +128,7 @@ main .slide .slide-container {
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 20px;
+  gap: 25px;
   margin: auto;
 }
 main .slide .slide-container > *:not(h1):not(h2.bigger-header) {
