--- a/src/css/spread.scss
+++ b/src/css/spread.scss
@@ -38,17 +38,19 @@ main {
         box-sizing: border-box;
         color: var(--text-color);
         overflow-y: auto;
-        padding: 60px 10px;
+        padding: 60px 15px 80px;
         scroll-snap-align: start;
 
         &#home {
-            .slide-container {
-                min-height: 100%;
-                justify-content: center;
-            }
+            padding-top: 90px;
 
             &.unverified {
                 display: flex;
+            }
+
+            .slide-container {
+                min-height: 100%;
+                justify-content: center;
             }
 
             .description {
@@ -56,6 +58,7 @@ main {
                 font-weight: 700;
                 line-height: 1.5rem;
                 max-width: 650px;
+                padding: 30px 0;
             }
 
             #custom-question {
@@ -68,11 +71,12 @@ main {
             }
 
             #questions {
+                gap: 35px;
+
                 &,
                 .question-section {
                     display: flex;
                     flex-direction: column;
-                    gap: 10px;
                 }
 
                 &,
@@ -81,7 +85,7 @@ main {
                 }
 
                 .question-section {
-                    margin-bottom: 30px;
+                    gap: 10px;
 
                     button {
                         height: 60px;
@@ -145,7 +149,7 @@ main {
             display: flex;
             align-items: center;
             flex-direction: column;
-            gap: 20px;
+            gap: 25px;
             margin: auto;
 
             & > *:not(h1):not(h2.bigger-header) {
