--- a/src/css/style.css
+++ b/src/css/style.css
@@ -115,15 +115,14 @@ body textarea {
   justify-content: center;
   flex-direction: column;
   margin: 0 auto;
-  padding: 60px 10px;
+  padding: 90px 15px;
   text-align: center;
 }
-#alternative-page .container.settings {
-  gap: 20px;
-  margin: auto;
+#alternative-page .container#custom-spread, #alternative-page .container.settings {
+  gap: 25px;
 }
-#alternative-page .container.settings h2 {
-  margin-bottom: 0;
+#alternative-page .container.settings {
+  margin: auto;
 }
 #alternative-page .container.settings button {
   width: 150px;
@@ -132,6 +131,7 @@ body textarea {
 h1,
 h2 {
   font-family: "Norse Bold", "Times New Roman", Times, serif;
+  margin: 0;
 }
 
 h1 {
@@ -149,7 +149,6 @@ h2 {
 h2.bigger-header {
   font-size: 2.4rem;
   line-height: 2.7rem;
-  margin-bottom: 15px;
 }
 
 #card-images {
@@ -201,7 +200,7 @@ details > summary::-webkit-details-marker {
 #compare-tables {
   width: 100%;
   display: flex;
-  gap: 20px;
+  gap: 25px;
   justify-content: center;
 }
 #compare-tables .compare {
