--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -131,16 +131,16 @@ body {
         justify-content: center;
         flex-direction: column;
         margin: 0 auto;
-        padding: 60px 10px;
+        padding: 90px 15px;
         text-align: center;
 
+        &#custom-spread,
         &.settings {
-            gap: 20px;
-            margin: auto;
+            gap: 25px;
+        }
 
-            h2 {
-                margin-bottom: 0;
-            }
+        &.settings {
+            margin: auto;
 
             button {
                 width: 150px;
@@ -154,6 +154,7 @@ body {
 h1,
 h2 {
     font-family: "Norse Bold", "Times New Roman", Times, serif;
+    margin: 0;
 }
 
 h1 {
@@ -171,7 +172,6 @@ h2 {
     &.bigger-header {
         font-size: 2.4rem;
         line-height: 2.7rem;
-        margin-bottom: 15px;
     }
 }
 
@@ -236,7 +236,7 @@ details {
 #compare-tables {
     width: 100%;
     display: flex;
-    gap: 20px;
+    gap: 25px;
     justify-content: center;
 
     .compare {
