--- a/src/css/spread.css
+++ b/src/css/spread.css
@@ -77,7 +77,7 @@ main .slide#home #questions .question-section {
   gap: 10px;
 }
 main .slide#home #questions .question-section button {
-  height: 60px;
+  min-height: 60px;
   background-color: rgba(100, 100, 100, 0.2);
   box-sizing: border-box;
   color: var(--text-color);
