--- a/src/css/spread.scss
+++ b/src/css/spread.scss
@@ -88,7 +88,7 @@ main {
                     gap: 10px;
 
                     button {
-                        height: 60px;
+                        min-height: 60px;
                         background-color: rgba(100, 100, 100, 0.2);
                         box-sizing: border-box;
                         color: var(--text-color);
