--- a/src/css/loading.scss
+++ b/src/css/loading.scss
@@ -1,14 +1,19 @@
 @import url("./colors.css");
 
-#loading {
+#loading-container {
     background-color: var(--bg-color);
-    background-image: url("./assets/loading.gif");
-    background-position: center;
-    background-size: cover;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    transition: 0.5s;
+
+    #loading {
+        height: 100%;
+        width: 100%;
+        background-image: url("./assets/loading.gif");
+        background-position: center;
+        background-size: cover;
+        transition: 0.5s;
+    }
 }
