--- a/src/css/style.css
+++ b/src/css/style.css
@@ -128,6 +128,36 @@ body textarea {
   width: 150px;
 }
 
+header nav {
+  height: 35px;
+}
+header nav ul {
+  height: 100%;
+  display: flex;
+  list-style-type: none;
+  gap: 5px;
+  margin: 0;
+  padding: 0;
+}
+header nav ul li {
+  flex: 1;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 1rem;
+}
+header nav ul li.highlighted {
+  background-color: transparent;
+  color: var(--text-color);
+}
+
+main {
+  display: flex;
+  flex: 1;
+  overflow: auto;
+  overflow-x: hidden;
+  scroll-snap-type: x mandatory;
+}
+
 h1,
 h2 {
   font-family: "Norse Bold", "Times New Roman", Times, serif;
@@ -149,6 +179,29 @@ h2 {
 h2.bigger-header {
   font-size: 2.4rem;
   line-height: 2.7rem;
+}
+
+.slide {
+  height: 100%;
+  min-width: 100vw;
+  box-sizing: border-box;
+  color: var(--text-color);
+  overflow-y: auto;
+  padding: 60px 15px 80px;
+  scroll-snap-align: start;
+}
+.slide .slide-container {
+  max-width: 800px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 25px;
+  margin: auto;
+}
+.slide .slide-container > *:not(h1):not(h2.bigger-header) {
+  margin: 0;
+  text-align: center;
 }
 
 #card-images {
@@ -182,19 +235,6 @@ img.separator {
   width: 150px;
   margin: auto;
   padding: 40px 0;
-}
-
-details {
-  width: 100%;
-}
-details[open] summary {
-  display: none;
-}
-details > summary {
-  list-style: none;
-}
-details > summary::-webkit-details-marker {
-  display: none;
 }
 
 #compare-tables {
@@ -232,6 +272,19 @@ details > summary::-webkit-details-marker {
   font-weight: 700;
 }
 
+details {
+  width: 100%;
+}
+details[open] summary {
+  display: none;
+}
+details > summary {
+  list-style: none;
+}
+details > summary::-webkit-details-marker {
+  display: none;
+}
+
 .subscribe-form {
   display: flex;
   justify-content: center;
@@ -239,17 +292,6 @@ details > summary::-webkit-details-marker {
 .subscribe-form img.stripe-logo {
   width: 125px;
   margin-top: 20px;
-}
-
-#user-options {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-}
-
-.wait {
-  font-style: italic;
 }
 
 ul.words-list {
@@ -266,6 +308,17 @@ ul.words-list li {
   border-radius: 8px;
   font-weight: 700;
   padding: 5px 10px;
+}
+
+#user-options {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+
+.wait {
+  font-style: italic;
 }
 
 @media only screen and (max-width: 600px) {
