--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -62,6 +62,43 @@ body {
         text-align: center;
     }
 
+    input[type="checkbox"],
+    label,
+    select {
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    input[type="checkbox"] {
+        height: 15px;
+        width: 15px;
+        border-radius: 5px;
+
+        &:checked {
+            background-color: var(--accent-color) !important;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &::before {
+                content: "✓";
+                font-weight: 700;
+                font-size: 15px;
+            }
+        }
+    }
+
+    label {
+        width: fit-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        line-height: 0;
+        margin: auto;
+    }
+
     a[href^="mailto:"] {
         text-decoration: none;
     }
