--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -27,6 +27,7 @@
         align-items: center;
         flex-direction: column;
         gap: 10px;
+        margin: auto;
     }
 
     #questions {
