--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -186,6 +186,22 @@ body {
     }
 }
 
+.hebrew-letter {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 10px;
+    color: var(--accent-color-2);
+
+    span {
+        font-size: initial;
+        font-weight: normal;
+    }
+}
+
 // HEADER & MAIN
 
 header {
