--- a/src/css/style.css
+++ b/src/css/style.css
@@ -160,17 +160,17 @@ body textarea {
   width: 150px;
 }
 
-.hebrew-letter {
+.symbolize {
+  min-height: 40px;
   display: flex;
   flex-direction: column;
   gap: 6px;
   justify-content: center;
   font-size: 30px;
   font-weight: bold;
-  padding: 10px;
   color: var(--accent-color-2);
 }
-.hebrew-letter span {
+.symbolize span {
   font-size: initial;
   font-weight: normal;
 }
