highlight world sefirot

--- a/public/kabbalah/css/tol.scss
+++ b/public/kabbalah/css/tol.scss
@@ -1,5 +1,17 @@
 // Tree of Life
 
+#trees {
+    .tol {
+        &.kircher {
+            // background-color: rgb(70, 0, 0);
+        }
+
+        &:not(.kircher) {
+            // background-color: darkgreen;
+        }
+    }
+}
+
 .tol {
     --width: clamp(150px, 30vh, 200px);
     --offset: calc(var(--width) * 0.04);
@@ -7,26 +19,55 @@
     --height: calc(var(--width) * (9 / 5) + (var(--offset) * 2));
     --sef-dim: calc(var(--width) * 0.2);
     --center: calc(50% - (var(--sef-dim) / 2));
+    --path-height: calc(var(--width) / 20);
+    --path-width: calc(var(--width) / 2.5);
 
     height: var(--height);
     width: var(--width);
     margin: auto;
     position: relative;
 
+    &.kircher {
+        --kircher-deg: 58deg;
+        --kircher-side: calc(var(--offset) * 3);
+        --kircher-push-text: calc(var(--path-height) * / -2);
+
+        .koph,
+        .zayn {
+            width: calc(var(--path-width) * 1.75) !important;
+            top: calc(var(--sef-dim) * 5.5) !important;
+        }
+
+        .koph {
+            transform: rotate(var(--kircher-deg)) !important;
+            left: var(--kircher-side) !important;
+
+            span {
+                transform: rotate(calc(var(--kircher-deg) * -1)) !important;
+                right: var(--kircher-push-text) !important;
+            }
+        }
+
+        .zayn {
+            transform: rotate(calc(var(--kircher-deg) * -1)) !important;
+            right: var(--kircher-side) !important;
+
+            span {
+                transform: rotate(var(--kircher-deg)) !important;
+                left: var(--kircher-push-text) !important;
+            }
+        }
+    }
+
     .sef,
     .path {
         position: absolute;
-
-        &.highlight {
-            background-color: yellow;
-            color: #222;
-        }
     }
 
     .sef {
         height: var(--sef-dim);
         width: var(--sef-dim);
-        background-color: wheat;
+        background-color: #b0bdff;
         border: 2px solid #222;
         border-radius: 50%;
         box-shadow: 0 0 10px #999;
@@ -37,6 +78,11 @@
         justify-content: center;
         font-size: calc(var(--width) / 10);
         z-index: 5;
+
+        &.highlight {
+            background-color: rgb(122, 0, 146);
+            color: #eee;
+        }
 
         &.center {
             left: var(--center);
@@ -80,9 +126,6 @@
     }
 
     .path {
-        --path-height: calc(var(--width) / 20);
-        --path-width: calc(var(--width) / 2.5);
-
         height: var(--path-height);
         width: var(--path-width);
         background-color: #000;
@@ -98,6 +141,19 @@
 
         span {
             position: relative;
+        }
+
+        &.mother,
+        &.highlight {
+            background-color: rgb(122, 0, 146);
+        }
+
+        &.double {
+            background-color: rgb(71, 0, 11);
+        }
+
+        &.other {
+            background-color: rgb(0, 47, 62);
         }
 
         &.diag {
