--- a/public/kabbalah/css/tol.css
+++ b/public/kabbalah/css/tol.css
@@ -5,24 +5,47 @@
   --height: calc(var(--width) * (9 / 5) + (var(--offset) * 2));
   --sef-dim: calc(var(--width) * 0.2);
   --center: calc(50% - (var(--sef-dim) / 2));
+  --path-height: calc(var(--width) / 20);
+  --path-width: calc(var(--width) / 2.5);
   height: var(--height);
   width: var(--width);
   margin: auto;
   position: relative;
 }
+.tol.kircher {
+  --kircher-deg: 58deg;
+  --kircher-side: calc(var(--offset) * 3);
+  --kircher-push-text: calc(var(--path-height) * / -2);
+}
+.tol.kircher .koph,
+.tol.kircher .zayn {
+  width: calc(var(--path-width) * 1.75) !important;
+  top: calc(var(--sef-dim) * 5.5) !important;
+}
+.tol.kircher .koph {
+  transform: rotate(var(--kircher-deg)) !important;
+  left: var(--kircher-side) !important;
+}
+.tol.kircher .koph span {
+  transform: rotate(calc(var(--kircher-deg) * -1)) !important;
+  right: var(--kircher-push-text) !important;
+}
+.tol.kircher .zayn {
+  transform: rotate(calc(var(--kircher-deg) * -1)) !important;
+  right: var(--kircher-side) !important;
+}
+.tol.kircher .zayn span {
+  transform: rotate(var(--kircher-deg)) !important;
+  left: var(--kircher-push-text) !important;
+}
 .tol .sef,
 .tol .path {
   position: absolute;
 }
-.tol .sef.highlight,
-.tol .path.highlight {
-  background-color: yellow;
-  color: #222;
-}
 .tol .sef {
   height: var(--sef-dim);
   width: var(--sef-dim);
-  background-color: wheat;
+  background-color: #b0bdff;
   border: 2px solid #222;
   border-radius: 50%;
   box-shadow: 0 0 10px #999;
@@ -33,6 +56,10 @@
   justify-content: center;
   font-size: calc(var(--width) / 10);
   z-index: 5;
+}
+.tol .sef.highlight {
+  background-color: rgb(122, 0, 146);
+  color: #eee;
 }
 .tol .sef.center {
   left: var(--center);
@@ -65,8 +92,6 @@
   top: calc(var(--sef-dim) * 8 + var(--offset));
 }
 .tol .path {
-  --path-height: calc(var(--width) / 20);
-  --path-width: calc(var(--width) / 2.5);
   height: var(--path-height);
   width: var(--path-width);
   background-color: #000;
@@ -82,6 +107,15 @@
 }
 .tol .path span {
   position: relative;
+}
+.tol .path.mother, .tol .path.highlight {
+  background-color: rgb(122, 0, 146);
+}
+.tol .path.double {
+  background-color: rgb(71, 0, 11);
+}
+.tol .path.other {
+  background-color: rgb(0, 47, 62);
 }
 .tol .path.diag {
   --side: calc(var(--sef-dim) / 2);
