--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -2,6 +2,6 @@
     --bg-color: #111328;
     --box-bg-color: rgba(250, 250, 250, 0.25);
     --text-color: #f6ecdb;
-    --accent-color: #cf9a4a;
+    --accent-color: #f8bf6a;
     --accent-color-2: #96afb3;
 }
