--- a/public/css/services.css
+++ b/public/css/services.css
@@ -6,8 +6,10 @@ table#services thead {
   font-weight: bold;
 }
 table#services thead tr:first-child td {
-  background-color: #525785;
+  background-color: #b8d7dc;
   border-radius: 25px 25px 0 0;
+  color: #222;
+  font-size: 20px;
 }
 table#services tbody tr:last-child td:first-child {
   border-radius: 0 0 0 30px;
@@ -20,11 +22,11 @@ table#services tbody tr td:not(:first-child) {
   font-weight: bold;
 }
 table#services tbody tr td:not(:first-child).slow {
-  background-color: rgba(255, 255, 224, 0.8);
+  background-color: #ccc;
 }
 table#services tbody tr td:not(:first-child).stop {
-  background-color: rgba(255, 182, 193, 0.8);
+  background-color: #aaa;
 }
 table#services tbody tr td:last-child {
-  background-color: rgba(179, 254, 179, 0.8);
+  background-color: #f8bf6a;
 }/*# sourceMappingURL=services.css.map */
