--- a/src/css/sign-in.scss
+++ b/src/css/sign-in.scss
@@ -40,6 +40,12 @@
             }
         }
 
+        label {
+            width: 100%;
+            display: inline-block;
+            text-align: right;
+        }
+
         #sign-in-error {
             color: lightcoral;
         }
