--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -12,7 +12,7 @@
     --box-bg-color: rgba(250, 250, 250, 0.25);
     --text-color: #f6ecdb;
     --accent-color: #f8bf6a;
-    --accent-color-2: #96afb3;
+    --accent-color-2: #b8d7dc;
 }
 
 body,
