--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -3,5 +3,5 @@
     --box-bg-color: rgba(250, 250, 250, 0.25);
     --text-color: #f6ecdb;
     --accent-color: #f8bf6a;
-    --accent-color-2: #96afb3;
+    --accent-color-2: #b8d7dc;
 }
