--- a/src/css/sign-in.scss
+++ b/src/css/sign-in.scss
@@ -37,6 +37,10 @@
 
             #sign-in-btn {
                 background-color: var(--text-color);
+
+                &:hover {
+                    background-color: var(--accent-color-2);
+                }
             }
         }
 
@@ -59,7 +63,7 @@
             text-decoration: underline;
 
             &:hover {
-                color: var(--text-color);
+                color: var(--accent-color-2);
             }
         }
     }
