fix decan backdoor

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -333,6 +333,7 @@ details > summary::-webkit-details-marker {
 }
 
 .subscribe-form {
+  width: 100%;
   display: flex;
   justify-content: center;
 }
