add new section components to Home

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,14 @@
   font-weight: 700;
   font-style: normal;
 }
+section {
+  min-height: 100%;
+  width: 100%;
+  border: 5px solid purple;
+  box-sizing: border-box;
+  overflow: auto;
+}
+
 body,
 html,
 #root {
